# bevy_midi

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: master.yml
assets/models/: black_key.gltf  white_key_0.gltf  white_key_1.gltf  white_key_2.gltf
credits/: CREDITS.md
credits/licenses/: midir_MIT.md
examples/: adsick_piano.rs  egui.rs  input.rs  interactive.rs  midi.rs  minimal.rs  output.rs  piano.rs  playback.rs  simple.rs
examples/browser/: Cargo.toml  index.html
examples/browser/src/: lib.rs
src/: input.rs  lib.rs  output.rs  safe_wrappers.rs  synth.rs  types.rs
