[package]
name = "bevy_midi"
version = "0.8.0"
authors = ["Black Phlox <bphlox@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_midi"
documentation = "https://docs.rs/bevy_midi"
description = "Send and receive MIDI data to and from bevy and other programs or controllers."
keywords = ["gamedev", "bevy", "midi", "encoding", "control"]
categories = ["game-development", "game-engines", "encoding" ]
exclude = [
    ".github/*",
    "assets/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_midi"

[dependencies]
midir = "0.10"
crossbeam-channel = "0.5.8"

[dev-dependencies]
bevy_egui = { version = "0.27", features = ["immutable_ctx"]}
strum = { version = "0.26", features = ["derive"] }
bevy_mod_picking = "0.18"

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["multi-threaded"]

[dev-dependencies.bevy]
version = "0.13"
features = ["bevy_core_pipeline","bevy_asset", "bevy_scene", "bevy_render", "bevy_winit", "bevy_gltf", "bevy_ui", "bevy_text", "zstd", "tonemapping_luts", "ktx2", "hdr"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.13"
features = ["x11", "wayland"]
default-features = false
