[package]
name = "bevy_midi"
version = "0.12.0"
authors = ["Black Phlox <bphlox@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_midi"
documentation = "https://docs.rs/bevy_midi"
description = "Send and receive MIDI data to and from bevy and other programs or controllers."
keywords = ["gamedev", "bevy", "midi", "encoding", "control"]
categories = ["game-development", "game-engines", "encoding"]
exclude = [".github/*", "assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_midi"

[dependencies]
midir = "0.10"
crossbeam-channel = "0.5.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["MidiAccess", "MidiPort", "MidiInput", "MidiOutput", "Navigator", "Window"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
send_wrapper = "0.6"

[dev-dependencies]
bevy_egui = { version = "0.37", default-features = false, features = ["immutable_ctx", "render"] }
strum = { version = "0.26", features = ["derive"] }

[dependencies.bevy]
version = "0.17"
default-features = false
features = ["multi_threaded", "bevy_log"]

[dev-dependencies.bevy]
version = "0.17"
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_text",
    "bevy_ui_render",
    "bevy_winit",
    "hdr",
    "ktx2",
    "tonemapping_luts",
    "zstd_rust"
]
default-features = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.bevy]
version = "0.17"
features = ["webgl2"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.17"
features = ["x11", "wayland"]
default-features = false
